# wren

./: .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: autobahn.yml  autobahn_gate.py  ci.yml  loc.yml
http3-proto/: Cargo.toml  README.md
http3-proto/benches/: generated_static_lookup.rs  qpack_static_lookup.rs
http3-proto/fuzz/: Cargo.toml
http3-proto/fuzz/fuzz_targets/: connection_handle.rs  frame_decode.rs  qpack_decode.rs  validate_section.rs  varint_decode.rs
http3-proto/src/: backend.rs  error.rs  lib.rs  macros.rs
http3-proto/src/connection/: mod.rs  queue.rs  tests.rs
http3-proto/src/event/: mod.rs  tests.rs
http3-proto/src/frame/: mod.rs  tests.rs
http3-proto/src/headers/: mod.rs  tests.rs
http3-proto/src/qpack/: decode.rs  encode.rs  huffman.rs  int.rs  mod.rs  static_table.rs  tests.rs
http3-proto/src/qpack/huffman/: generated.rs  mod.rs
http3-proto/src/qpack/static_table/: generated.rs  mod.rs
http3-proto/src/settings/: mod.rs  tests.rs
http3-proto/src/stream/: mod.rs  tests.rs
http3-proto/src/stream_store/: mod.rs  tests.rs
http3-proto/src/validate/: mod.rs  tests.rs
http3-proto/src/varint/: mod.rs  tests.rs
http3-proto/tests/: no_panic.rs  tiers.rs
websocket-proto/: Cargo.toml  README.md
websocket-proto/examples/: autobahn-client.rs  autobahn-server.rs
websocket-proto/fuzz/: Cargo.toml
websocket-proto/fuzz/fuzz_targets/: connection_handle.rs  ext_params.rs  frame_decode.rs  h1_request.rs  h1_response.rs
websocket-proto/proptest-regressions/: connection.txt  utf8.txt
websocket-proto/src/: backend.rs  base64.rs  connection.rs  constants.rs  error.rs  frame.rs  handshake.rs  lib.rs  macros.rs  message.rs  negotiation.rs  time.rs  utf8.rs
websocket-proto/src/connection/: events.rs  mod.rs  recv.rs  role.rs  send.rs
websocket-proto/src/frame/: close.rs  header.rs  mask.rs  mod.rs  opcode.rs
websocket-proto/src/handshake/: connect.rs  extra.rs  h1.rs  mod.rs  parser.rs
websocket-proto/src/handshake/h1/: client.rs  mod.rs  server.rs
websocket-proto/tests/: no_panic.rs  round_trip.proptest-regressions  round_trip.rs
wren-compio/: Cargo.toml  README.md
wren-compio/examples/: echo-client.rs  echo-server.rs
wren-compio/src/: duplex.rs  error.rs  into_duplex.rs  lib.rs  maybe_tls.rs  options.rs
wren-compio/src/conn/: mod.rs  split.rs  tests.rs
wren-compio/src/handshake/: mod.rs  tests.rs
wren-compio/src/url/: mod.rs  tests.rs
wren-compio/tests/: loopback.rs  loopback_tls.rs
wren-reactor/: Cargo.toml  README.md
wren-reactor/examples/: echo-client.rs  echo-server.rs
wren-reactor/src/: duplex.rs  error.rs  lib.rs  maybe_tls.rs  options.rs  runtime.rs  tls.rs
wren-reactor/src/conn/: mod.rs  split.rs  tests.rs  write.rs
wren-reactor/src/handshake/: mod.rs  tests.rs
wren-reactor/tests/: loopback.rs  loopback_tls.rs
wren-trace/: Cargo.toml  README.md
wren-trace/src/: lib.rs  tests.rs
xtask/src/: main.rs  qpack_data.rs
