[workspace]
members = ["websocket-proto"]
resolver = "3"

[workspace.dependencies]
websocket-proto = { version = "0.1", path = "websocket-proto", default-features = false }
thiserror = { version = "2", default-features = false }
derive_more = { version = "2", default-features = false, features = ["display", "from", "is_variant", "unwrap", "try_unwrap"] }
rand_core = { version = "0.10", default-features = false }
rand = { version = "0.10", default-features = false }
sha1 = { version = "0.10", default-features = false }
miniz_oxide = { version = "0.8", default-features = false }
smol_str = { version = "0.3", default-features = false }
bytes = { version = "1", default-features = false }
heapless = { version = "0.9", default-features = false }
portable-atomic = { version = "1", default-features = false, features = ["fallback"] }
portable-atomic-util = { version = "0.2", default-features = false, features = ["alloc"] }

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
