[workspace]
members = ["websocket-proto", "wren-trace", "wren-compio", "wren-reactor", "http3-proto"]
resolver = "3"

[workspace.dependencies]
websocket-proto = { version = "0.1", path = "websocket-proto", default-features = false }
http3-proto = { version = "0.1", path = "http3-proto", default-features = false }
wren-trace = { version = "0.1", path = "wren-trace" }
agnostic-net = { version = "0.3", default-features = false }
agnostic-lite = { version = "0.6", default-features = false }
futures-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
compio = "0.19"
compio-net = "0.12"
compio-io = "0.10"
compio-runtime = "0.12"
compio-buf = "0.8.2"
compio-tls = { version = "0.10", default-features = false }
event-listener = "5"
futures-util = { version = "0.3", default-features = false }
tracing = { version = "0.1", default-features = false }
rcgen = "0.14"
thiserror = { version = "2", default-features = false }
derive_more = { version = "2", default-features = false, features = ["display", "from", "is_variant", "try_unwrap"] }
rand_core = { version = "0.10", default-features = false }
rand = { version = "0.10", default-features = false }
sha1 = { version = "0.11", default-features = false }
miniz_oxide = { version = "0.8", default-features = false }
smol_str = { version = "0.3", default-features = false }
bytes = { version = "1", default-features = false }
portable-atomic = { version = "1", default-features = false, features = ["fallback"] }
portable-atomic-util = { version = "0.2", default-features = false, features = ["alloc"] }

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
