[package]
name = "http3-proto"
version = "0.1.0"
edition = "2024"
# `benches/generated_static_lookup.rs` is `include!`d by the bench below, not a
# standalone target; disable auto-discovery so it is not built as its own bench.
autobenches = false
rust-version = "1.91.0"
license = "MIT OR Apache-2.0"
description = "Sans-I/O HTTP/3 Extended-CONNECT tunnel state machine (RFC 9114/9204/9220; no_std, no_alloc capable, panic-free)."
repository = "https://github.com/al8n/websockit"
readme = "README.md"
keywords = ["http3", "quic", "no-std", "sans-io", "websocket"]
categories = ["network-programming", "no-std", "embedded", "web-programming"]

[features]
default = ["std"]
std = ["thiserror/default", "dep:bytes", "bytes/std", "dep:slab", "slab/std", "dep:hashbrown"]
alloc = ["dep:bytes", "dep:slab", "dep:hashbrown"]
# `no-atomic`: the alloc tier for cores WITHOUT native atomic CAS (Cortex-M0+ /
# thumbv6m / RP2040). Same state machine as `alloc`, but the refcounted DATA
# buffer uses `portable_atomic_util::Arc<[u8]>` (cheap clone via
# `portable-atomic` + a `critical-section` impl provided by the final binary)
# instead of `bytes::Bytes`. Mutually exclusive with `alloc` / `std`.
no-atomic = [
  "dep:portable-atomic",
  "dep:portable-atomic-util",
  "portable-atomic/critical-section",
  "dep:slab",
  "dep:hashbrown",
]
slab = ["dep:slab"]
# Internal: exposes `pub(crate)` hot paths so `tests/no_panic.rs` can wrap them
# in `#[no_panic]` shims. Implies `std` (the test driver is std-only). Not for
# downstream use — the re-exports are doc-hidden and unstable.
test-no-panic = ["std"]

[dependencies]
thiserror.workspace = true
derive_more.workspace = true
bytes = { workspace = true, optional = true }
slab = { version = "0.4", default-features = false, optional = true }
hashbrown = { version = "0.16", default-features = false, optional = true }
portable-atomic = { workspace = true, optional = true }
portable-atomic-util = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1"
no-panic = "0.1"
phf = { version = "0.13.1", default-features = false, features = ["macros"] }
criterion = "0.7"

[[bench]]
name = "qpack_static_lookup"
harness = false
required-features = ["std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
