[package]
name = "websocket-proto"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT OR Apache-2.0"
description = "Sans-I/O WebSocket protocol state machines (RFC 6455/7692/8441/9220; no_std, no_alloc capable, panic-free)."
repository = "https://github.com/al8n/websockit"
readme = "README.md"
keywords = ["websocket", "no-std", "sans-io", "embedded", "protocol"]
categories = ["network-programming", "no-std", "embedded", "web-programming::websocket"]

[features]
default = ["std"]
# `std` and `alloc` are INDEPENDENT: in std mode the real `std` crate already
# provides everything `alloc` does, so the flag is not implied — each feature
# layers the heap deps and their matching feature itself (heap items are gated
# `any(std, alloc, no-atomic)` accordingly).
std = [
  "dep:smol_str",
  "dep:bytes",
  "thiserror/std",
  "smol_str/std",
  "bytes/std",
  "rand?/std",
  "rand?/thread_rng",
]
alloc = ["dep:smol_str", "dep:bytes"]
deflate = ["alloc", "dep:miniz_oxide"]
# `no-atomic`: the heap tier for cores WITHOUT native atomic CAS (Cortex-M0+ /
# thumbv6m / RP2040). Same Message/Negotiated owned storage as `alloc`, but the
# refcounted text/binary buffers use `portable_atomic_util::Arc` (cheap clone
# via `portable-atomic` + a `critical-section` impl provided by the final
# binary) instead of smol_str's `alloc::sync::Arc` + `bytes`. Pick one heap
# tier; `deflate` is NOT available here (it requires `alloc`, which drags in the
# `smol_str` / `bytes` crates that need native CAS) — combining the two without
# `std` is a `compile_error!` (see lib.rs), and CI pins that the combo fails.
no-atomic = [
  "dep:portable-atomic",
  "dep:portable-atomic-util",
  "portable-atomic/critical-section",
]
# Internal: exposes `pub(crate)` hot paths so `tests/no_panic.rs` can wrap them
# in `#[no_panic]` shims. Implies `std` (the test driver is std-only). Not for
# downstream use — the re-exports are doc-hidden and unstable.
test-no-panic = ["std"]

[dependencies]
thiserror.workspace = true
derive_more.workspace = true
rand_core.workspace = true
sha1.workspace = true
smol_str = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
miniz_oxide = { workspace = true, optional = true, features = ["with-alloc"] }
rand = { workspace = true, optional = true, features = ["std_rng"] }
portable-atomic = { workspace = true, optional = true }
portable-atomic-util = { workspace = true, optional = true }

[dev-dependencies]
base64 = "0.22"
proptest = "1"
rand_core.workspace = true
no-panic = "0.1"

[[example]]
name = "autobahn-server"
required-features = ["std", "deflate"]

[[example]]
name = "autobahn-client"
required-features = ["std", "deflate"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
