[package]
name = "wren-compio"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
description = "compio-native async WebSocket driver (client + server), thread-per-core."
repository = "https://github.com/al8n/wren"
homepage = "https://github.com/al8n/wren"
documentation = "https://docs.rs/wren-compio"
license = "MIT OR Apache-2.0"
keywords = ["websocket", "compio", "async", "client", "server"]
categories = ["network-programming", "asynchronous", "web-programming::websocket"]
readme = "README.md"

[features]
default = []
tls = ["dep:compio-tls", "dep:rustls", "dep:webpki-roots"]
deflate = ["websocket-proto/deflate"]
tracing = ["wren-trace/tracing"]

[dependencies]
websocket-proto = { workspace = true, features = ["std"] }
wren-trace.workspace = true
compio = { workspace = true, features = ["time"] }
compio-net.workspace = true
compio-io.workspace = true
compio-runtime.workspace = true
compio-buf.workspace = true
compio-tls = { workspace = true, optional = true, features = ["rustls", "ring"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = { version = "1", optional = true }
event-listener.workspace = true
futures-util = { workspace = true, features = ["std", "async-await"] }
rand = { workspace = true, features = ["std", "std_rng", "thread_rng"] }
thiserror = { workspace = true, features = ["std"] }
smol_str = { workspace = true, features = ["std"] }
bytes = { workspace = true, features = ["std"] }

[dev-dependencies]
compio = { workspace = true, features = ["macros", "time"] }
rcgen.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
