[package]
name = "websocket-proto-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
rand_core = { version = "0.10", default-features = false }
websocket-proto = { path = "..", features = ["std", "deflate"] }

[[bin]]
name = "connection_handle"
path = "fuzz_targets/connection_handle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "frame_decode"
path = "fuzz_targets/frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h1_request"
path = "fuzz_targets/h1_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h1_response"
path = "fuzz_targets/h1_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ext_params"
path = "fuzz_targets/ext_params.rs"
test = false
doc = false
bench = false

# Standalone: not a member of the websockit workspace.
[workspace]
